Lesson 19 - adding a register page (views, urls, forms)

--- a/coolsite/woman/templates/women/base.html
+++ b/coolsite/woman/templates/women/base.html
@@ -16,19 +16,18 @@
         <td valign=top>
 
             <div class="header">
+<!--Menu -->
                 <ul id="mainmenu" class="mainmenu">
                     <li class="logo"><a href="{% url 'home' %}">
                         <div class="logo"></div>
                     </a></li>
-
                     {% for m in menu %}
-                    {% if not forloop.last %}
                     <li><a href="{% url m.url_name %}">{{m.title}}</a></li>
-                    {% else %}
-                    <li class="last"><a href="{% url m.url_name %}">{{m.title}}</a></li>
-                    {% endif %}
                     {% endfor %}
+
+                    <li class="last"><a href="{% url 'register' %}">Регистрация</a> | <a href="{% url 'login' %}">Войти</a></li>
                 </ul>
+<!--End menu-->
                 <div class="clear"></div>
             </div>
 
@@ -98,7 +97,7 @@
                                 </ul>
                             </nav>
                             {% endif %}
-                            <!--                            Конец пагинатора-->
+                            <!--Конец пагинатора-->
                         </div>
                         <!-- Конец блока контента -->
 
