--- a/coolsite/woman/templates/women/base.html
+++ b/coolsite/woman/templates/women/base.html
@@ -14,9 +14,9 @@
 <table class="table-page" border=0 cellpadding="0" cellspacing="0">
     <tr>
         <td valign=top>
-
+            <!--Menu -->
+            {% block mainmenu %}
             <div class="header">
-<!--Menu -->
                 <ul id="mainmenu" class="mainmenu">
                     <li class="logo"><a href="{% url 'home' %}">
                         <div class="logo"></div>
@@ -24,13 +24,16 @@
                     {% for m in menu %}
                     <li><a href="{% url m.url_name %}">{{m.title}}</a></li>
                     {% endfor %}
-
+                    {% if request.user.is_authenticated %}
+                    <li class="last">{{user.username}} | <a href="{% url 'logout' %}">Выйти</a> </li>
+                    {% else %}
                     <li class="last"><a href="{% url 'register' %}">Регистрация</a> | <a href="{% url 'login' %}">Войти</a></li>
+                    {% endif %}
                 </ul>
-<!--End menu-->
                 <div class="clear"></div>
             </div>
-
+            {% endblock mainmenu %}
+            <!--End menu-->
             <table class="table-content" border=0 cellpadding="0" cellspacing="0">
                 <tr>
                     <!-- Sidebar слева -->
