--- a/coolsite/woman/static/women/css/styles.css
+++ b/coolsite/woman/static/women/css/styles.css
@@ -81,7 +81,7 @@ ul.list-articles li {
 }
 
 .logo {
-	background: url('../images/logo.png') no-repeat 10px 5px;
+	background: url('../women/images/logo.png') no-repeat 10px 5px;
 	width: 70px;
 	height: 60px;
 }
@@ -195,12 +195,12 @@ div.button {
 .left-chapters ul li.share a.share-yt {
 	width: 100%;
 	height: 30px;
-	background: url('../images/share_yt.png') no-repeat 0 0
+	background: url('../women/images/share_yt.png') no-repeat 0 0
 }
 .left-chapters ul li.share a.share-yt:hover {
 	width: 100%;
 	height: 30px;
-	background: url('../images/share_yt.png') no-repeat 0 -30px
+	background: url('../women/images/share_yt.png') no-repeat 0 -30px
 }
 
 .content {
@@ -347,7 +347,7 @@ ul.lang-list li a:hover {color: #fdc073;}
 .highlight .block p { margin: 0; }
 
 .quote {
-	background: url('../images/blockquote.png') no-repeat 0 10px;
+	background: url('../women/images/blockquote.png') no-repeat 0 10px;
 	padding: 5px 5px 5px 70px;
 	font-family: Sans-serif, Arial, Tahoma;
 	font-style: italic;
